# Starling-TUI

./: .gitignore  Cargo.toml  README.md  build.rs  cmake-toolchain.cmake  justfile
.cargo/: config.toml
.forgejo/workflows/: mirror.yml  release.yml
.github/workflows/: mirror.yml  release.yml  sonarqube.yml
docs/: build-guide.html
src/: call.rs  config.rs  crypto.rs  event.rs  logger.rs  main.rs  net.rs  opus_ffi.rs  playback.rs  setup.rs  sync.rs  ui.rs  util.rs  video.rs  voice.rs
src/roost/: mod.rs
