[package]
name = "Starling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
cpal = "0.18.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
data-encoding = "2.11.0"
flate2 = "1.1"
iroh = "1.0.3"
iroh-gossip = "0.101.0"
n0-future = "0.3.2"
opus = "0.3.1"
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.2"
ringbuf = "0.5.1"
serde = { version = "1.0.229", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.53.1", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4", "serde"] }

# Linux: enable cpal's PulseAudio backend + libc for stderr suppression
[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.18.1", features = ["pulseaudio"] }
libc = "0.2"

# Other Unix (macOS, BSDs): libc for stderr suppression
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2"